Fix details view on small screens

--- a/css/style.less
+++ b/css/style.less
@@ -1276,11 +1276,6 @@ div.percentdone{
 .template{
 	display: none;
 }
-@media only screen and (max-width: 768px) {
-	#app-content.details-visible{
-		left:-370px !important;
-	}
-}
 .detail-categories{
 	.select2-container-multi .select2-choices{
 		border: 1px solid transparent;
